--- a/html/Verkauf1.html
+++ b/html/Verkauf1.html
@@ -38,14 +38,14 @@
   <div class="pointer1">
     <div class="container wasdienedgeschafthaben">
       <div class="row">
-        <div class="col-md-3 col-sm-6">
-          <div class="product-grid2">
+        <div id="Verkauf1_ALCLEARWaschhandschuh" class="col-md-3 col-sm-6">
+          <!--<div class="product-grid2">
             <div class="product-image2">
-			<a href="ALCLEARWaschhandschuh.html">
+              <a href="ALCLEARWaschhandschuh.html">
 
-              <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/716iMjDLDoL._AC_SY550_.jpg">
-              <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81Xnmqr5wNL._AC_SX466_.jpg">
-			</a>
+                <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/716iMjDLDoL._AC_SY550_.jpg">
+                <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81Xnmqr5wNL._AC_SX466_.jpg">
+              </a>
               <a class="add-to-cart" href="ALCLEARWaschhandschuh.html">Mikrofaser Waschhandschuh, mit dem man das Auto kratzerfrei reinigen kann</a>
             </div>
             <div class="product-content">
@@ -53,15 +53,15 @@
               <input id="userInput" step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
               <button id="addProduct1" onclick="Input1()">In den Warenkorb</button>
             </div>
-          </div>
+          </div> -->
         </div>
         <div class="col-md-3 col-sm-6">
           <div class="product-grid2">
             <div class="product-image2">
-			<a href="EimerGritGuard.html">
-              <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/51yi-JJt6PL._AC_SY355_.jpg">
-              <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/61mrtbNymWL._AC_SY450_.jpg">
-			</a>
+              <a href="EimerGritGuard.html">
+                <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/51yi-JJt6PL._AC_SY355_.jpg">
+                <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/61mrtbNymWL._AC_SY450_.jpg">
+              </a>
 
               <a class="add-to-cart" href="EimerGritGuard.html">Wascheimer mit Grit Guard Einsatz, um Kratzer bei der Wäsche zu minimieren.</a>
             </div>
@@ -75,11 +75,11 @@
         <div class="col-md-3 col-sm-6">
           <div class="product-grid2">
             <div class="product-image2">
-			<a href="GloriaFM10.html">
+              <a href="GloriaFM10.html">
 
-              <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/41T7WahKIsL._AC_.jpg">
-              <img class="pic-2" src="../img/Spruehkoepfe.jpg">
-			</a>
+                <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/41T7WahKIsL._AC_.jpg">
+                <img class="pic-2" src="../img/Spruehkoepfe.jpg">
+              </a>
 
               <a class="add-to-cart" href="GloriaFM10.html">Schaumsprühe für die Vorwäsche, hiermit können gröbere Verschmutzungen angelöst werden.</a>
             </div>
@@ -93,10 +93,10 @@
         <div class="col-md-3 col-sm-6">
           <div class="product-grid2">
             <div class="product-image2">
-			<a href="GLORIATopFoam.html">
-              <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/61jmMJRxtNL._SL1500_.jpg">
-              <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/71gqfzhXf5L._SL1500_.jpg">
-			</a>
+              <a href="GLORIATopFoam.html">
+                <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/61jmMJRxtNL._SL1500_.jpg">
+                <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/71gqfzhXf5L._SL1500_.jpg">
+              </a>
 
               <a class="add-to-cart" href="GLORIATopFoam.html">Schaumsprüher-Füllung für die Vorwäsche, kann z.B. für die Gloria FM10 genutzt werden.</a>
             </div>
@@ -110,10 +110,10 @@
         <div class="col-md-3 col-sm-6">
           <div class="product-grid2">
             <div class="product-image2">
-			<a href="SONAXAutoShampoo.html">
-              <img class="pic-1" src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.polarautovaruste.com%2Fgraphics%2Fproducts%2Fthumbnails%2Fppicn_sonax_autoshampoo_cf6bdbe0.jpg&f=1">
-              <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81aZpYobFKL._SL1500_.jpg">
-			</a>
+              <a href="SONAXAutoShampoo.html">
+                <img class="pic-1" src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.polarautovaruste.com%2Fgraphics%2Fproducts%2Fthumbnails%2Fppicn_sonax_autoshampoo_cf6bdbe0.jpg&f=1">
+                <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81aZpYobFKL._SL1500_.jpg">
+              </a>
               <a class="add-to-cart" href="SONAXAutoShampoo.html">Shampoo für die Autowäsche.</a>
             </div>
             <div class="product-content">
@@ -126,10 +126,10 @@
         <div class="col-md-3 col-sm-6">
           <div class="product-grid2">
             <div class="product-image2">
-			<a href="PetzoldsLackknete.html">
-              <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/81iewTV55oL._AC_SY355_.jpg">
-              <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81iewTV55oL._AC_SY355_.jpg">
-			</a>
+              <a href="PetzoldsLackknete.html">
+                <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/81iewTV55oL._AC_SY355_.jpg">
+                <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81iewTV55oL._AC_SY355_.jpg">
+              </a>
 
               <a class="add-to-cart" href="PetzoldsLackknete.html">Lackknete für das Auto, um Verschmutzungen wie Teer, eingebrannte Insekten, Flugrost etc. zu entfernen.</a>
             </div>
@@ -158,23 +158,139 @@
 </html>
 
 <script>
+  $(document).ready(function() {
 
-$("#addProduct").click(function() {
+    $.ajax({
+      url: "http://localhost:8000/api/produkt/gib/1",
+      method: "get",
+      dataType: "json"
+    }).done(function(response) {
+      var tmp ='<div class="product-grid2">
+        <div class="product-image2">
+          <a href="ALCLEARWaschhandschuh.html">
+            <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/716iMjDLDoL._AC_SY550_.jpg">
+            <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81Xnmqr5wNL._AC_SX466_.jpg">
+          </a>
+          <a class="add-to-cart" href="ALCLEARWaschhandschuh.html">' + response.daten.beschreibungklein + '</a>
+        </div>
+        <div class="product-content">
+          <h3 class="title"><a href="ALCLEARWaschhandschuh.html">' + response.daten.name + '</br>' + response.daten.bruttopreis + '</br>inkl. MwSt.</a></h3>
+          <input id="userInput" step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
+          <button id="addProduct1" onclick="Input1()">In den Warenkorb</button>
+        </div>
+      </div>'
 
-  var obj = {"id":1,"bezeichnung":"ALCLEAR Waschhandschuh","nettopreis":12.99, "kategorie":{"id":1}, "mehrwertsteuer":{"id":1}};
+      $('#Verkauf1_ALCLEARWaschhandschuh').html(tmp);
 
-  $.ajax({
-            url: "http://localhost:8000/api/produkt",
-            method: "post",
-    contentType: "application/json",
-    data: JSON.stringify(obj)
-        }).done(function (response) {
-            console.log(response);
-            $("#output").html(JSON.stringify(response));
-        }).fail(function (jqXHR, statusText, error) {
-            console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
-            $("#output").html("Ein Fehler ist aufgetreten");
-        });
+    }).fail(function(jqXHR, statusText, error) {
+      console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+      $("#output").html("Ein Fehler ist aufgetreten");
     });
 
+    $.ajax({
+      url: "http://localhost:8000/api/produkt/gib/12",
+      method: "get",
+      dataType: "json"
+    }).done(function(response) {
+      var tmp = '';
+      tmp +='<div class="product-grid2"><div class ="product-image2"><a href = "ALCLEARWaschhandschuh.html"><img class ="pic-1" src ="https://images-na.ssl-images-amazon.com/images/I/716iMjDLDoL._AC_SY550_.jpg"><img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81Xnmqr5wNL._AC_SX466_.jpg"></a><a class="add-to-cart" href="ALCLEARWaschhandschuh.html">Mikrofaser Waschhandschuh, mit dem man das Auto kratzerfrei reinigen kann</a></div><div class="product-content"><h3 class="title"><a href="ALCLEARWaschhandschuh.html">';
+      tmp += response.daten.name;
+      tmp += '</br>';
+      tmp += response.daten.nettopreis;
+      tmp += '€</br>inkl. MwSt.</a></h3><input id="userInput" step="1" data-step-max="10" type="number" value ="0" data-decimals="0" min="0" max="360" class="col-4"/><button id="addProduct1" onclick="Input1()"> In den Warenkorb </button> </div> </div>';
+
+      //console.log(tmp);
+
+      $('#Verkauf1_ALCLEARWaschhandschuh').html(tmp);
+
+    }).fail(function(jqXHR, statusText, error) {
+      console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+      $("#output").html("Ein Fehler ist aufgetreten");
+    });
+
+    $.ajax({
+      url: "http://localhost:8000/api/produkt/gib/1",
+      method: "get",
+      dataType: "json"
+    }).done(function(response) {
+      var tmp = '';
+      tmp +='<div class="product-grid2"><div class ="product-image2"><a href = "ALCLEARWaschhandschuh.html"><img class ="pic-1" src ="https://images-na.ssl-images-amazon.com/images/I/716iMjDLDoL._AC_SY550_.jpg"><img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81Xnmqr5wNL._AC_SX466_.jpg"></a><a class="add-to-cart" href="ALCLEARWaschhandschuh.html">Mikrofaser Waschhandschuh, mit dem man das Auto kratzerfrei reinigen kann</a></div><div class="product-content"><h3 class="title"><a href="ALCLEARWaschhandschuh.html">';
+      tmp += response.daten.name;
+      tmp += '</br>';
+      tmp += response.daten.nettopreis;
+      tmp += '€</br>inkl. MwSt.</a></h3><input id="userInput" step="1" data-step-max="10" type="number" value ="0" data-decimals="0" min="0" max="360" class="col-4"/><button id="addProduct1" onclick="Input1()"> In den Warenkorb </button> </div> </div>';
+
+      //console.log(tmp);
+
+      $('#Verkauf1_ALCLEARWaschhandschuh').html(tmp);
+
+    }).fail(function(jqXHR, statusText, error) {
+      console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+      $("#output").html("Ein Fehler ist aufgetreten");
+    });
+
+    $.ajax({
+      url: "http://localhost:8000/api/produkt/gib/1",
+      method: "get",
+      dataType: "json"
+    }).done(function(response) {
+      var tmp = '';
+      tmp +='<div class="product-grid2"><div class ="product-image2"><a href = "ALCLEARWaschhandschuh.html"><img class ="pic-1" src ="https://images-na.ssl-images-amazon.com/images/I/716iMjDLDoL._AC_SY550_.jpg"><img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81Xnmqr5wNL._AC_SX466_.jpg"></a><a class="add-to-cart" href="ALCLEARWaschhandschuh.html">Mikrofaser Waschhandschuh, mit dem man das Auto kratzerfrei reinigen kann</a></div><div class="product-content"><h3 class="title"><a href="ALCLEARWaschhandschuh.html">';
+      tmp += response.daten.name;
+      tmp += '</br>';
+      tmp += response.daten.nettopreis;
+      tmp += '€</br>inkl. MwSt.</a></h3><input id="userInput" step="1" data-step-max="10" type="number" value ="0" data-decimals="0" min="0" max="360" class="col-4"/><button id="addProduct1" onclick="Input1()"> In den Warenkorb </button> </div> </div>';
+
+      //console.log(tmp);
+
+      $('#Verkauf1_ALCLEARWaschhandschuh').html(tmp);
+
+    }).fail(function(jqXHR, statusText, error) {
+      console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+      $("#output").html("Ein Fehler ist aufgetreten");
+    });
+
+
+    $.ajax({
+      url: "http://localhost:8000/api/produkt/gib/1",
+      method: "get",
+      dataType: "json"
+    }).done(function(response) {
+      var tmp = '';
+      tmp +='<div class="product-grid2"><div class ="product-image2"><a href = "ALCLEARWaschhandschuh.html"><img class ="pic-1" src ="https://images-na.ssl-images-amazon.com/images/I/716iMjDLDoL._AC_SY550_.jpg"><img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81Xnmqr5wNL._AC_SX466_.jpg"></a><a class="add-to-cart" href="ALCLEARWaschhandschuh.html">Mikrofaser Waschhandschuh, mit dem man das Auto kratzerfrei reinigen kann</a></div><div class="product-content"><h3 class="title"><a href="ALCLEARWaschhandschuh.html">';
+      tmp += response.daten.name;
+      tmp += '</br>';
+      tmp += response.daten.nettopreis;
+      tmp += '€</br>inkl. MwSt.</a></h3><input id="userInput" step="1" data-step-max="10" type="number" value ="0" data-decimals="0" min="0" max="360" class="col-4"/><button id="addProduct1" onclick="Input1()"> In den Warenkorb </button> </div> </div>';
+
+      //console.log(tmp);
+
+      $('#Verkauf1_ALCLEARWaschhandschuh').html(tmp);
+
+    }).fail(function(jqXHR, statusText, error) {
+      console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+      $("#output").html("Ein Fehler ist aufgetreten");
+    });
+
+    $.ajax({
+      url: "http://localhost:8000/api/produkt/gib/1",
+      method: "get",
+      dataType: "json"
+    }).done(function(response) {
+      var tmp = '';
+      tmp +='<div class="product-grid2"><div class ="product-image2"><a href = "ALCLEARWaschhandschuh.html"><img class ="pic-1" src ="https://images-na.ssl-images-amazon.com/images/I/716iMjDLDoL._AC_SY550_.jpg"><img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81Xnmqr5wNL._AC_SX466_.jpg"></a><a class="add-to-cart" href="ALCLEARWaschhandschuh.html">Mikrofaser Waschhandschuh, mit dem man das Auto kratzerfrei reinigen kann</a></div><div class="product-content"><h3 class="title"><a href="ALCLEARWaschhandschuh.html">';
+      tmp += response.daten.name;
+      tmp += '</br>';
+      tmp += response.daten.nettopreis;
+      tmp += '€</br>inkl. MwSt.</a></h3><input id="userInput" step="1" data-step-max="10" type="number" value ="0" data-decimals="0" min="0" max="360" class="col-4"/><button id="addProduct1" onclick="Input1()"> In den Warenkorb </button> </div> </div>';
+
+      //console.log(tmp);
+
+      $('#Verkauf1_ALCLEARWaschhandschuh').html(tmp);
+
+    }).fail(function(jqXHR, statusText, error) {
+      console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+      $("#output").html("Ein Fehler ist aufgetreten");
+    });
+  });
 </script>
