--- a/html/Verkauf1.html
+++ b/html/Verkauf1.html
@@ -18,22 +18,22 @@
 
 <body>
   <div class="pointer">
-    <div class="logo" onclick="window.location.href='start.html'">
-      <img src="../img/DeluxeCar.png" />
+    <div id="Verkauf1_Logo"class="logo" onclick="window.location.href='start.html'">
+      <!--<img src="../img/DeluxeCar.png" /> -->
     </div>
   </div>
   <nav>
     <ul>
       <li><a class="navi" href="start.html">Startseite</a></li>
-      <li><a class="navi" href="Verkauf1.html">Handwäsche</a></li>
-      <li><a class="navi" href="Verkauf2.html">Polituren und Poliermaschinen</a></li>
-      <li><a class="navi" href="Verkauf3.html">Versiegelungen und Wachse</a></li>
+      <li><a id="Verkauf1_Handwäsche" class="navi" href="Verkauf1.html"><!--Handwäsche--></a></li>
+      <li id="Verkauf1_Polituren und Poliermaschinen"><!--<a class="navi" href="Verkauf2.html">Polituren und Poliermaschinen</a>--></li>
+      <li id="Verkauf1_Versiegelungen und Wachse"><!--<a class="navi" href="Verkauf3.html">Versiegelungen und Wachse</a>--></li>
       <li><a class="navi" href="Warenkorb.html">Warenkorb</a></li>
     </ul>
   </nav>
 
   <div class="currentposition">
-    <h7>Handwäsche</h7>
+    <h7 id="Verkauf1_Handwäsche"><!--Handwäsche--></h7>
   </div>
   <div class="pointer1">
     <div class="container wasdienedgeschafthaben">
