--- a/html/Verkauf1.html
+++ b/html/Verkauf1.html
@@ -159,7 +159,11 @@
 
 <script>
   $(document).ready(function() {
-//##########################################################################################
+//AJAX for the logo
+
+//AJAX for the NAVBAR
+
+//AJAX for each Product
 $.ajax({
     url: "http://localhost:8000/api/produkt/gib/1",
     method: "get",
