--- a/html/Verkauf2.html
+++ b/html/Verkauf2.html
@@ -41,14 +41,14 @@
         <div class="col-md-3 col-sm-6">
           <div class="product-grid2">
             <div class="product-image2">
-
+              <a href="Menzerna400.html">
               <img class="pic-1" src="../img/Menzerna400.jpg">
               <img class="pic-2" src="../img/Menzerna400.jpg">
-
-              <p class="add-to-cart">Sehr Starke Politur, um sehr tiefe Kratzer zu korrigieren.</p>
+            </a>
+              <a class="add-to-cart" href="Menzerna400.html">Sehr Starke Politur, um sehr tiefe Kratzer zu korrigieren.</a>
             </div>
             <div class="product-content">
-              <h3 class="title">Menzerna 400</br>13,99 €</br>inkl. MwSt.</h3>
+              <h3 class="title"><a href="Menzerna400.html">Menzerna 400</br>13,99 €</br>inkl. MwSt.</a></h3>
               <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
               <button>In den Warenkorb</button>
             </div>
@@ -57,15 +57,15 @@
         <div class="col-md-3 col-sm-6">
           <div class="product-grid2">
             <div class="product-image2">
-
+              <a href="Menzerna1000.html">
               <img class="pic-1" src="../img/Menzerna1000.jpg">
               <img class="pic-2" src="../img/Menzerna1000.jpg">
+            </a>
 
-
-              <p class="add-to-cart"> Starke Politur, um tiefere Kratzer zu korrigieren.</p>
+              <a class="add-to-cart" href="Menzerna1000.html"> Starke Politur, um tiefere Kratzer zu korrigieren.</a>
             </div>
             <div class="product-content">
-              <h3 class="title">Menzerna 1000</br>11,99 €</br>inkl. MwSt.</h3>
+              <h3 class="title"><a href="Menzerna1000.html">Menzerna 1000</br>11,99 €</br>inkl. MwSt.</a></h3>
               <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
               <button>In den Warenkorb</button>
             </div>
@@ -74,15 +74,15 @@
         <div class="col-md-3 col-sm-6">
           <div class="product-grid2">
             <div class="product-image2">
-
+              <a href="Menzerna2500.html">
               <img class="pic-1" src="../img/Menzerna2500.jpg">
               <img class="pic-2" src="../img/Menzerna2500.jpg">
+            </a>
 
-
-              <p class="add-to-cart">Mittelstarke Politur, um mittlere und leichte Kratzer zu korrigieren.</p>
+              <a class="add-to-cart" href="Menzerna2500.html">Mittelstarke Politur, um mittlere und leichte Kratzer zu korrigieren.</a>
             </div>
             <div class="product-content">
-              <h3 class="title">Menzerna 2500</br>11,49 €</br>inkl. MwSt.</h3>
+              <h3 class="title"><a href="Menzerna2500.html">Menzerna 2500</br>11,49 €</br>inkl. MwSt.</a></h3>
               <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
               <button>In den Warenkorb</button></a>
             </div>
@@ -91,15 +91,15 @@
         <div class="col-md-3 col-sm-6">
           <div class="product-grid2">
             <div class="product-image2">
-
+              <a href="Menzerna3500.html">
               <img class="pic-1" src="../img/Menzerna3500.jpg">
               <img class="pic-2" src="../img/Menzerna3500.jpg">
+            </a>
 
-
-              <p class="add-to-cart">Hochglanzpolitur, um leichte Kratzer und Hologramme zu entfernen.</p>
+              <a class="add-to-cart" href="Menzerna3500.html">Hochglanzpolitur, um leichte Kratzer und Hologramme zu entfernen.</a>
             </div>
             <div class="product-content">
-              <h3 class="title">Menzerna 3500</br>12,99 €</br>inkl. MwSt.</h3>
+              <h3 class="title"><a href="Menzerna3500.html">Menzerna 3500</br>12,99 €</br>inkl. MwSt.</a></h3>
               <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
               <button>In den Warenkorb</button>
             </div>
@@ -108,14 +108,14 @@
         <div class="col-md-3 col-sm-6">
           <div class="product-grid2">
             <div class="product-image2">
-
+              <a href="dino.html">
               <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/61jWpg%2B4qHL._AC_SY450_.jpg">
               <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/615CMajGm0L._AC_SY450_.jpg">
-
-              <p class="add-to-cart">Einsteiger Poliermaschine, mit einem guten Preis-Leistungs-Verhältnis.</p>
+            </a>
+              <a class="add-to-cart" href="dino.html">Einsteiger Poliermaschine, mit einem guten Preis-Leistungs-Verhältnis.</a>
             </div>
             <div class="product-content">
-              <h3 class="title">DINO Kraftpaket 9mm</br>69,99 €</br>inkl. MwSt.</h3>
+              <h3 class="title"><a href="dino.html">DINO Kraftpaket 9mm</br>69,99 €</br>inkl. MwSt.</a></h3>
               <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
               <button>In den Warenkorb</button>
             </div>
@@ -124,15 +124,15 @@
         <div class="col-md-3 col-sm-6">
           <div class="product-grid2">
             <div class="product-image2">
-
+              <a href="rupes.html">
               <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/610z0xMLrjL._AC_SX425_.jpg">
               <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/51GAAh-chaL._AC_SY606_.jpg">
+            </a>
 
-
-              <p class="add-to-cart">Profi Poliermaschine, für lange und intensive Einsätze geeignet.</p>
+              <a class="add-to-cart" href="rupes.html">Profi Poliermaschine, für lange und intensive Einsätze geeignet.</a>
             </div>
             <div class="product-content">
-              <h3 class="title">Rupes BigFoot</br>399,90 €</br>inkl. MwSt.</h3>
+              <h3 class="title"><a href="rupes.html">Rupes BigFoot</br>399,90 €</br>inkl. MwSt.</a></h3>
               <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
               <button>In den Warenkorb</button>
             </div>
