--- a/html/Menzerna400.html
+++ b/html/Menzerna400.html
@@ -30,41 +30,42 @@
       <li><a class="navi" href="Warenkorb.html">Warenkorb</a></li>
     </ul>
   </nav>
-  
+
   <div class="currentposition">
-  <h7> Menterna 400 </h7>
+    <h7> Menterna 400 </h7>
   </div>
-<div class="container wasdienedgeschafthaben">
+  <div class="container wasdienedgeschafthaben">
     <div class="row">
-  <table>
+      <table>
 
 
-    <tr>
-      <td>
-        <div class="product-grid2">
-          <div class="product-image2">
-            <img class="pic-1" src="../img/Menzerna400.jpg">
-              <img class="pic-2" src="../img/Menzerna400.jpg">
-        </div>
-        </div>
-        </td>
-      <td class="großeschrift">Preis: 13,99 € inkl. MwSt. <br>
-          Status: Auf Lager<br>
-          Versandkostenfrei<br>
-          Lieferzeit: 1-3 Werktage</td>
-      <td class="großeschrift">Stückzahl: <br><input id="userInput" step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3" /> <br><br><button id="addProduct" onclick="Input1()">In den </br>Warenkorb</button></td>
-  
-    </tr>
-  </table>
-  
-  
-  <div class="container wasdienedgeschafthaben">           
-    <h8><b>Artikelbeschreibung:</b></h8><br><br>
-    Menzerna Heavy Cut Compound 400 (HCC 400) ist die innovative Schleifpolitur fürmoderneAutomobil-Klarlacke. HCC 400 beseitigt Schleifspuren sowie Gebrauchsspuren in kürzester Zeit und garantiert eine glänzende Oberfläche.
+        <tr>
+          <td>
+            <div class="product-grid2">
+              <div class="product-image2">
+                <img class="pic-1" src="../img/Menzerna400.jpg">
+                <img class="pic-2" src="../img/Menzerna400.jpg">
+              </div>
+            </div>
+          </td>
+          <td class="großeschrift">Preis: 13,99 € inkl. MwSt. <br>
+            Status: Auf Lager<br>
+            Versandkostenfrei<br>
+            Lieferzeit: 1-3 Werktage</td>
+          <td class="großeschrift">Stückzahl: <br><input id="userInput" step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3" /> <br><br><button id="addProduct" onclick="Input1()">In den
+              </br>Warenkorb</button></td>
 
-  </div> 
- 
-  </div>
+        </tr>
+      </table>
+
+
+      <div class="container wasdienedgeschafthaben">
+        <h8><b>Artikelbeschreibung:</b></h8><br><br>
+        Menzerna Heavy Cut Compound 400 (HCC 400) ist die innovative Schleifpolitur fürmoderneAutomobil-Klarlacke. HCC 400 beseitigt Schleifspuren sowie Gebrauchsspuren in kürzester Zeit und garantiert eine glänzende Oberfläche.
+
+      </div>
+
+    </div>
   </div>
   <!-- footer -->
   <div class="footer-basic">
